# run_gptj4all

./: .gitignore  LICENSE  Makefile  README.md  create_python_package.py  dev_install_deps.sh  download.sh  install_deps.sh  justfile  pyproject.toml  run.sh  test_and_commit.sh
tools/: note  parse_junit.py
wrap_gptj4all/: __init__.py  __main__.py  start.py
wrap_gptj4all/test/: create_python_package_test.py
